--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # expo
-.expo/
+.expo
 
 # dependencies
-/node_modules
+node_modules
 
 # misc
+.DS*
+.env
 .env.local
 .env.development.local
 .env.test.local
